# probprog-24-25

./: .gitignore  README.md
byo-ppl/: Makefile  README.md  byo-ppl.opam  dune-project
byo-ppl/byoppl/: basic.ml  cps_operators.ml  cps_operators.mli  distribution.ml  distribution.mli  dune  infer.ml
byo-ppl/examples/: coin.ml  dune  funny_bernoulli.ml  hmm.ml  regression.ml
byo-ppl/semi-symbolic/: dune  semi_symb.ml  test.ml
td/: 1-td-muppl.ipynb  Readme.md
td/td-pyro/: pyro-vae.ipynb
td/td-pyro_optional/: README.md  pyro-intro.ipynb  requirements.txt
td/td-stan_optional/: .gitignore  README.md
td/td1-mu_ppl/: 1-td-muppl.ipynb  galton.py
td/td2-sem/: sem.py
td/td4-stan/: requirements.txt  stan-intro.ipynb
